# crane-fmu

./: .buildinfo  .coveragerc  .gitignore  .sourcery.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  STYLEGUIDE.md  azure-docbuild.yml  azure-pipelines.yml  genindex.html  index.html  modules.html  pyproject.toml  readme.html  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  tox.ini
.github/workflows/: _code_quality.yml  _test.yml  publish_release.yml
_sources/: index.rst.txt  readme.rst.txt
_static/: basic.css
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  crane_fmu.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
branch/main/_autosummary/: crane_fmu.boom.Boom.html  crane_fmu.boom.html  crane_fmu.crane.Animation.html  crane_fmu.crane.Crane.html  crane_fmu.crane.html
branch/main/_sources/: api.rst.txt  index.rst.txt
branch/main/_sources/_autosummary/: crane_fmu.boom.Boom.rst.txt  crane_fmu.boom.rst.txt  crane_fmu.crane.Animation.rst.txt  crane_fmu.crane.Crane.rst.txt  crane_fmu.crane.rst.txt
branch/main/_static/: classic.css
docs/_ext/: assumption.py  get_from_code.py  spec.py  specification.py
docs/source/: api.rst  cli.my_package.rst  cli.rst  conf.py  crane_fmu.rst  index.rst  modules.rst  my_package.api.rst  my_package.rst  my_package.subpackage1.module1.rst  my_package.subpackage1.rst  my_package.subpackage2.module2.rst  my_package.subpackage2.rst  my_package.utils.logging.rst  my_package.utils.rst
examples/: animation.py  plot3d.py  visual_simulator.py
src/crane_fmu/: __init__.py  boom.py  crane.py  logger.py
src/my_package/: api.py
src/my_package/cli/: my_package.py
src/my_package/subpackage1/: module1.py
src/my_package/subpackage2/: module2.py
src/my_package/utils/: logging.py
tests/: .gitignore  conftest.py  mobile_crane.py  test_3d_animation.py  test_3dplot.py  test_api.py  test_crane.py  test_mobile_crane_FMU.py  test_mobile_crane_OSP.py
tests/OSP_model/: CraneFMU.py  MobileCrane.fmu  OspSystemStructure.xml  SimpleTable.fmu
tests/cli/: test_my_package_cli.py
tests/resources/: MobileCrane.cases  MobileCrane.fmu  OspSystemStructure.xml
tests/subpackage1/: test_module1.py
tests/subpackage2/: test_module2.py
tests/test_working_directory/: .gitignore  test_config_file.json
tests/test_working_directory/config/: OspSystemStructure.xml
tests/test_working_directory/fmus/: MobileCrane.fmu
