[build-system]
    requires = ["setuptools>=61.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "Crane_FMU"
    version = "0.1"
    description = "Basic crane simulation model including publication as FMU, for usage in the SEACo project"
    authors = [
        {name = "Siegfried Eisinger", email = "Siegfried.Eisinger@DNV.com"},
    ]
    readme = "README.rst"
    requires-python = ">=3.10.10"
    keywords = ["simulation", "model", "FMI", "OSP", "crane", "tight coupling"]
    license = {text = "BSD-3-Clause"}
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]
    dependencies = [
        "component-model>=0.0.1",
        "pythonfmu>=0.6.5",
        "numpy>=1.24.2",
        "FMPy>=0.3.20",
        "matplotlib>=3.7.1"
    ]
    #dynamic = ["version"]


[project.optional-dependencies]
    modelTest = ["FMPy>=3.9", "matplotlib>=3.7.1"]
    rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
    editor = ["thonny>=4.0.2"]
    dev = ["pytest>=8.2","ruff>=0.4.2","mypy>=1.8.0","Sphinx>=7.3","sphinx-argparse-cli>=1.15","myst-parser>=3.0",
           "furo>=2024.4"]

[tool.black]
    line-length = 120
    target-version = ["py310"]

[tool.ruff]
    exclude = [
        ".git",
        ".venv",
        ".tox",
        "build",
        "dist",
        "__pycache__",
        "./doc/source/conf.py",
    ]
    src = ["case_study"]
    lint.ignore = [
        "E501",  # Line length too long
        "D100",  # Missing docstring in public module
        "D101",  # Missing docstring in public class
        "D102",  # Missing docstring in public method
        "D103",  # Missing docstring in public function
        "D104",  # Missing docstring in public package
        "D105",  # Missing docstring in magic method
        "D107",  # Missing docstring in __init__
        "D202",  # No blank lines allowed after function docstring
        "D203",  # 1 blank line required before class docstring
        "D205",  # 1 blank line required between summary line and description
        "D212",  # Multi-line docstring summary should start at the first line
        "D213",  # Multi-line docstring summary should start at the second line
        # "N802",  # Function name should be lowercase  (uncomment if you want to allow Uppercase function names)
        "N803",  # Argument name should be lowercase  (uncommented. Lower-camelCase is accepted for variables related to XML and FMI standard)
        "N806",  # Variable in function should be lowercase  (uncomment if you want to allow Uppercase variable names in functions)
        # "N815",  # Variable in class scope should not be mixedCase  (uncomment if you want to allow mixedCase variable names in class scope)
        # "N816",  # Variable in global scope should not be mixedCase  (uncomment if you want to allow mixedCase variable names in global scope)
        ]

    line-length = 120
    lint.select = [
        "E",
        "D",
        "F",
        "N",
        "W",
        "I",
        "B",
    ]
    target-version = "py310"

    [tool.ruff.lint.pep8-naming]
    ignore-names = [
        "test_*",
        "setUp",
        "tearDown",
    ]

    [tool.ruff.lint.pydocstyle]
    convention = "numpy"

    [tool.ruff.lint.per-file-ignores]
    "__init__.py" = ["I001"]
    "./tests/*" = ["D"]

[tool.mypy]
    exclude = [
        ".git",
        ".venv",
        ".tox",
        "build",
        "dist",
        "**/__pycache__",
        "./doc/source/conf.py",
        "tests",
    ]

[tool.pytest.ini_options]
    testpaths = [
        "tests",
    ]
    addopts = "--strict-markers"
    xfail_strict = "True"
