[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/crane_fmu",
    "tests",
    ".coveragerc",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "manage.py",
    "pyproject.toml",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/crane_fmu",
]

[project]
name = "Crane_FMU"
version = "0.1.0"
description = "Basic crane simulation model including publication as FMU, for usage in the SEACo project"
readme = "README.rst"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Siegfried Eisinger", email = "Siegfried.Eisinger@DNV.com" },
]
keywords = [
    "simulation",
    "model",
    "FMI",
    "OSP",
    "crane",
    "tight coupling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    # "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "component-model>=0.1.0",
    "pythonfmu>=0.6.5",
    "numpy>=1.26,<2.0",
    "FMPy>=0.3.22",
    "matplotlib>=3.10",
]

[project.optional-dependencies]
rest = [
    "docutils>=0.3",
]
editor = [
    "thonny>=4.0.2",
]

[project.urls]
Homepage = "https://github.com/dnv-opensource/crane-fmu"
Documentation = "https://dnv-innersource.github.io/crane-fmu/README.html"
Repository = "https://github.com/dnv-opensource/crane-fmu.git"
Issues = "https://github.com/dnv-opensource/crane-fmu/issues"
Changelog = "https://github.com/dnv-opensource/crane-fmu/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8.3",
    "pyright>=1.1.390",
    "mypy>=1.13",
    "sourcery>=1.27",
    "pre-commit>=4.0",
    "Sphinx>=8.1",
    "sphinx-argparse-cli>=1.19",
    "sphinx-autodoc-typehints>=2.5",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
    "jupyter>=1.1",
    "pandas-stubs>=2.2",
]

[tool.uv]
default-groups = [
    "dev",
]
native-tls = true


[project.scripts]
crane-fmu = "crane_fmu.cli.crane_fmu:main"


[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    # "tests",
    "examples",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]
